--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<!-- 日志组件 -->
-		<slf4j-api.version>1.7.26</slf4j-api.version>
 		<jcl-over-slf4j.version>1.7.26</jcl-over-slf4j.version>
 		<log4j-api.version>2.11.1</log4j-api.version>
 		<log4j-core.version>2.11.1</log4j-core.version>
@@ -99,10 +98,53 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptors>
+						<descriptor>assembly/assembly.xml</descriptor>
+					</descriptors>
+					<outputDirectory>${project.build.directory}/dist/</outputDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.prepared.HotReloadApplication</mainClass>
+							<addClasspath>false</addClasspath>
+						</manifest>
+						<manifestEntries>
+							<!-- 在Class-Path下添加配置文件的路径 -->
+							<Class-Path>..</Class-Path>
+						</manifestEntries>
+					</archive>
+					<excludes>
+						<exclude>/mapper</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
